--- a/app/views/manage/questionnaire-enf/index.html
+++ b/app/views/manage/questionnaire-enf/index.html
@@ -25,17 +25,10 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
+        classes: 'govuk-tag--light-blue govuk-!-margin-left-2',
+        text: 'In progress'
       }) }}
     </h2>
-
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        
-      </li>
-    </ul>
 
     {{ govukButton({
       html: 'View prototype',
