--- a/app/views/manage/questionnaire-enf/v1/constraints/refuse-waste-materials.html
+++ b/app/views/manage/questionnaire-enf/v1/constraints/refuse-waste-materials.html
@@ -1,14 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the site in a national landscape?' %}
+{% set title = 'Does the enforcement notice include a change of use of land to dispose refuse or waste materials?' %}
 
 {% set prototypeLinks = [
   {
-    href: 'national-landscape?titleVersion=a',
+    href: 'refuse-waste-materials?titleVersion=a',
     text: 'Switch content'
   } if data['titleVersion'] == 'b' else
   {
-    href: 'national-landscape?titleVersion=b',
+    href: 'refuse-waste-materials?titleVersion=b',
     text: 'Switch content'
   }
 ] %}
@@ -22,8 +22,8 @@
   {% if data['titleVersion'] == 'a' %}
 
     {{ govukRadios({
-      idPrefix: 'national-landscape',
-      name: 'national-landscape',
+      idPrefix: 'refuse-waste-materials',
+      name: 'refuse-waste-materials',
       fieldset: {
         legend: {
           html: title,
@@ -35,12 +35,12 @@
         {
           html: 'Yes',
           value: 'Yes',
-          checked: checked('national-landscape','Yes')
+          checked: checked('refuse-waste-materials','Yes')
         },
         {
           html: 'No',
           value: 'No',
-          checked: checked('national-landscape','No')
+          checked: checked('refuse-waste-materials','No')
         }
       ]
     }) }}
@@ -48,11 +48,11 @@
   {% else %}
 
     {{ govukRadios({
-      idPrefix: 'national-landscape',
-      name: 'national-landscape',
+      idPrefix: 'refuse-waste-materials',
+      name: 'refuse-waste-materials',
       fieldset: {
         legend: {
-          html: 'Is the site in a national landscape?',
+          html: 'Does the enforcement notice include a change of use of land to dispose refuse or waste materials?',
           classes: 'govuk-fieldset__legend--l',
           isPageHeading: true
         }
@@ -61,12 +61,12 @@
         {
           html: 'Yes',
           value: 'Yes',
-          checked: checked('national-landscape','Yes')
+          checked: checked('refuse-waste-materials','Yes')
         },
         {
           html: 'No',
           value: 'No',
-          checked: checked('national-landscape','No')
+          checked: checked('refuse-waste-materials','No')
         }
       ]
     }) }}
