--- a/app/views/manage/questionnaire-enf/v1/notified/appeal-notification-upload.html
+++ b/app/views/manage/questionnaire-enf/v1/notified/appeal-notification-upload.html
@@ -1,11 +1,11 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your scoping opinion' %}
+{% set title = 'Upload the appeal notification and the list of people that you notified' %}
 
 {% block questions %}
 
   <span class="govuk-caption-l">
-    Environmental impact assessment
+    Notifying people about the application
   </span>
 
   <h1 class="govuk-heading-l">
@@ -14,8 +14,8 @@
 
   {% set uploadHtml %}
     {{ govukFileUpload({
-      id: 'scoping-upload',
-      name: 'scoping-upload',
+      id: 'appeal-notification-upload',
+      name: 'appeal-notification-upload',
       classes: 'moj-multi-file-upload__input',
       label: {
         text: 'Upload files',
@@ -23,19 +23,18 @@
       },
       hint: {
         text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 25MB'
-      },
-      attributes: { multiple: '' }
+      }
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
 
   {{ mojMultiFileUpload({
     uploadedFiles: {
-      heading: { text: 'Files added' },
+      heading: { text: 'File added' },
       items: []
     },
     uploadHtml: uploadHtml
@@ -44,12 +43,25 @@
 
 {% block pageScripts %}
   <script>
+    // Hacky hacky single file
+    $('.moj-multi-file-upload__dropzone .govuk-body').text('Drag and drop a file here or ')
+    $('.moj-multi-file-upload__dropzone .govuk-button').text('Select file')
+    $('.moj-multi-file__uploaded-files').on('fileAdded', function() {
+      $('.moj-multi-file-upload__upload').hide()
+    });
+
+    $('.moj-multi-file__uploaded-files').click(function() {
+      $('.moj-multi-file-upload__upload').show()
+    });
+
+
+
     // I really should learn how the MOJ upload works, however, a hack to get all the files passed into data
     $('form').submit(function(e) {
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
-        $('<input name="scoping-upload" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
+        $('<input name="appeal-notification-upload" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
       });
 
       $(this).unbind('submit').submit();
