--- a/app/views/manage/questionnaire-enf/v1/po-report/policies-upload.html
+++ b/app/views/manage/questionnaire-enf/v1/po-report/policies-upload.html
@@ -12,6 +12,16 @@
     {{ title }}
   </h1>
 
+  <p class="govuk-!-margin-bottom-2">Only upload the policies that you listed in the decision.</p>
+  <p class="govuk-!-margin-bottom-2">You must include the:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>front page</li>
+    <li>title</li>
+    <li>date that the policy was approved or adopted</li>
+    <li>status of the plan</li>
+    <li>copies of the policies and the relevant supporting text</li>
+  </ul>
+
   {% set uploadHtml %}
     {{ govukFileUpload({
       id: 'policies-upload',
