--- a/app/views/manage/questionnaire-enf/v1/task-list__notified.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__notified.html
@@ -1,6 +1,6 @@
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">3. </span> Notifying relevant parties
+    <span class="app-task-list__section-number">3. </span> Notifying relevant parties of the application
     {% if data['notified-completed'] == 'true' %}
       {{ govukTag({
         html: 'Completed'
@@ -22,32 +22,32 @@
     rows: [
     {
       key: {
-        html: 'How did you notify relevant parties about the application?'
+        html: 'Upload the appeal notification letter and the list of people that you notified'
       },
       value: {
-        html: data['notified-how'] | e | replace(',', '<br>') or 'A press advert'
+        html: '<a href="#">'+(data['appeal-notification-upload'] or 'Notification_letter.pdf')+'</a>'
       }
-      if data['notified-how-complete'] else
+      if data['appeal-notification-upload-complete'] else
       {
         html: '<span class="govuk-hint">Not started</span>'
       },
       actions: {
         items: [
           {
-            href: 'notified/notified-how?cya=true',
+            href: 'notified/appeal-notification-upload?cya=true',
             html: 'Change'
           }
-          if data['notified-how-complete'] else
+          if data['appeal-notification-upload-complete'] else
           {
-            href: 'notified/notified-how',
-            html: 'Answer'
+            href: 'notified/appeal-notification-upload',
+            html: 'Upload'
           }
         ]
       }
     },
       {
         key: {
-          html: 'Who did you notify about this application?'
+          html: 'Upload the list of people that you served the enforcement notice to'
         },
         value: {
           html: '<a href="#">'+(data['notified-who'] or 'Notified list.pdf')+'</a>'
@@ -69,82 +69,7 @@
             }
           ]
         }
-      },
-      {
-        key: {
-          html: 'Appeal notification letter'
-        },
-        value: {
-          html: data['site-notice-upload'] or 'site-notice.pdf'
-        }
-        if data['site-notice-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'notified/site-notice-upload?cya=true',
-              html: 'Change'
-            }
-            if data['site-notice-upload-complete'] else
-            {
-              href: 'notified/site-notice-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['notified-how'] and data['notified-how'].includes('A site notice'),
-      {
-        key: {
-          html: 'Letter sent to neighbours'
-        },
-        value: {
-          html: data['letters-upload'] or 'letter.pdf'
-        }
-        if data['letters-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'notified/letters-upload?cya=true',
-              html: 'Change'
-            }
-            if data['letters-upload-complete'] else
-            {
-              href: 'notified/letters-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['notified-how'] and data['notified-how'].includes('Letters to the neighbours'),
-      {
-        key: {
-          html: 'Press advert'
-        },
-        value: {
-          html: data['press-advert-upload'] or 'press-advert.pdf'
-        }
-        if data['press-advert-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'notified/press-advert-upload?cya=true',
-              html: 'Change'
-            }
-            if data['press-advert-upload-complete'] else
-            {
-              href: 'notified/press-advert-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['notified-how'] and data['notified-how'].includes('A press advert')
+      }
     ]
   }) }}
 </li>
