application fee enf

--- a/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
+++ b/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
@@ -131,6 +131,8 @@
         text: "Continue to my appeal"
       }) }}
 
+      <p class="govuk-body">[new link here - waiting on content]</p>
+
     </div>
   </div>
 {% endblock %}
