--- a/app/views/appeal/before-you-start/aad/v4/successful/check.html
+++ b/app/views/appeal/before-you-start/aad/v4/successful/check.html
@@ -127,9 +127,15 @@
         ]
       }) }}
 
-      {{ govukButton({
-        text: "Continue to my appeal"
-      }) }}
+
+<div class="govuk-button-group">
+  {{ govukButton({
+    text: "Continue to my appeal"
+  }) }}
+
+  <a class="govuk-link" href="#">These details are incorrect, start again...help and guidance??</a>
+
+</div>
 
 
     </div>
