--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -33,7 +33,7 @@ href: '/#appeal'
         board plans for this work</a></p>'
     }) }}
 
-    <h2 class="govuk-heading-m">Latest version (October 2025):</h2>
+    <h2 class="govuk-heading-m">Latest version:</h2>
 
     {{ govukButton({
       html: 'View prototype',
